[tool.poetry]
name = "pycounts_nv0125"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Nicholas Varabioff"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
